Fixed height issue causing webpage to jump on mobile devices when url bar hides

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import '~quill/dist/quill.snow.css';
 
 html, body { 
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 body {  
